--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "private": true,
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "chai": "^4.3.10",
     "http-server": "^14.1.1",
     "prettier": "^3.1.1",
